--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=fluveny-backend
+spring.data.mongodb.uri=mongodb://root:myfluveny@mongo:27017/fluvenydb?authSource=admin&authMechanism=SCRAM-SHA-256
+spring.data.mongodb.authentication-database=admin
+api.security.token.secret=${JWT_SECRET:my-secret-key}
