Fixing problems connecting to the docker database

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.application.name=fluveny-backend
 
-spring.data.mongodb.uri=mongodb://root:myfluveny@mongo_test:27017/fluvenydb?authSource=admin&authMechanism=SCRAM-SHA-256
+spring.data.mongodb.uri=mongodb://root:myfluveny@localhost:27018/fluvenydb?authSource=admin&authMechanism=SCRAM-SHA-256
 spring.data.mongodb.authentication-database=admin
 
 api.security.token.secret=test-secret-key
